[package]
name = "gt"
version = "1.0.0"
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT License"
edition = "2018"
description = "Generate template of gitignore / license via GitHub REST API"

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.50"
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["full"] }
